refactor(road): 优化道路分段存储和测试环境配置
- 将 Road 的 segmentIds 从 Set 改为有序 List 存储
- 新增 getOrderedSegmentIds 方法保持分段顺序访问
- 重构 RoadEdgeListHelper 中的道路长度计算逻辑
- 更新 RoadNetworkBuilder 在交叉点分割时同步拓扑顺序
- 添加完整的单元测试验证分段顺序功能
- 为测试环境添加必要的世界服务接口实现